# n8n-automations

./: .env.example  .gitignore  README.md  deploy.py  pyproject.toml  requirements-dev.txt
.github/workflows/: deploy.yml  test.yml
snippets/: _common.py  business_legitimacy.py  company_maturity.py  contactability.py  prospect_validator.py  site_seo_check.py  snippet_registry.json  url_health_check.py
tests/: conftest.py  test_business_legitimacy.py  test_company_maturity.py  test_contactability.py  test_prospect_validator.py  test_site_seo_check.py  test_url_health_check.py
