[project]
name = "n8n-automations"
version = "1.0.0"
description = "Python code snippets for n8n workflows"
requires-python = ">=3.9"

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["snippets"]
omit = ["snippets/_common.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "# --- n8n Code Node Entry Point ---",
]
